fix popup img alignment

--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ a:active { text-decoration: none; }
 .best-movie-img{
     height: 400px;
     background-color: brown;
+    justify-self: center;
+    align-self: center;
 }
 
 .grid-categories{
